# etl_pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.py
input/: SOC2020_sample.csv  config.yaml  mock_data.csv  soc_2020_sample.csv
src/: logging_handler.py  main.py  utils.py
tests/: conftest.py  test_placeholder.py  test_utils.py
